fix: title section video

--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
         </div>
 
         <div class="portfolio__photos">
-          <img src="./assets/img/portfolio/img1.jpg" alt="photo" class="portfolio__photos__img">
-          <img src="./assets/img/portfolio/img2.jpg" alt="photo" class="portfolio__photos__img">
-          <img src="./assets/img/portfolio/img3.jpg" alt="photo" class="portfolio__photos__img">
-          <img src="./assets/img/portfolio/img4.jpg" alt="photo" class="portfolio__photos__img">
-          <img src="./assets/img/portfolio/img5.jpg" alt="photo" class="portfolio__photos__img">
-          <img src="./assets/img/portfolio/img6.jpg" alt="photo" class="portfolio__photos__img">
+          <img src="./assets/img/portfolio/autumn/1.jpg" alt="photo" class="portfolio__img">
+          <img src="./assets/img/portfolio/autumn/2.jpg" alt="photo" class="portfolio__img">
+          <img src="./assets/img/portfolio/autumn/3.jpg" alt="photo" class="portfolio__img">
+          <img src="./assets/img/portfolio/autumn/4.jpg" alt="photo" class="portfolio__img">
+          <img src="./assets/img/portfolio/autumn/5.jpg" alt="photo" class="portfolio__img">
+          <img src="./assets/img/portfolio/autumn/6.jpg" alt="photo" class="portfolio__img">
         </div>
       </div>
 
@@ -112,7 +112,6 @@
         </div>
 
         <div class="video__player">
-          <img src="./assets/img/Video/video.jpg" alt="photo">
           <button class="video__player-btn icon"></button>
         </div>
       </div>
