feat: add change photo

--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
         </div>
 
         <div class="portfolio__buttons">
-          <button class="portfolio__buttons-btn btn btn-tr">Winter</button>
-          <button class="portfolio__buttons-btn btn btn-tr">Spring</button>
-          <button class="portfolio__buttons-btn btn btn-tr">Summer</button>
-          <button class="portfolio__buttons-btn btn">Autumn</button>
+          <button class="portfolio__buttons-btn btn btn-tr" data-season="winter">Winter</button>
+          <button class="portfolio__buttons-btn btn btn-tr" data-season="spring">Spring</button>
+          <button class="portfolio__buttons-btn btn btn-tr" data-season="summer">Summer</button>
+          <button class="portfolio__buttons-btn btn btn-tr _active" data-season="autumn">Autumn</button>
         </div>
 
         <div class="portfolio__photos">
