--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
       <div class="header__logo icon"></div>
       <nav class="header__nav">
         <ul class="header__nav-list list">
-          <li class="header__nav-item"><a href="#skills" class="header__nav-item-link">Skills</a></li>
-          <li class="header__nav-item"><a href="#portfolio" class="header__nav-item-link">Portfolio</a></li>
-          <li class="header__nav-item"><a href="#video" class="header__nav-item-link">Video</a></li>
-          <li class="header__nav-item"><a href="#price" class="header__nav-item-link">Price</a></li>
-          <li class="header__nav-item"><a href="#contacts" class="header__nav-item-link">Contacts</a></li>
+          <li class="header__nav-item"><a href="#skills" class="header__nav-item-link" data-i18n="skills">Skills</a></li>
+          <li class="header__nav-item"><a href="#portfolio" class="header__nav-item-link" data-i18n="portfolio">Portfolio</a></li>
+          <li class="header__nav-item"><a href="#video" class="header__nav-item-link" data-i18n="video">Video</a></li>
+          <li class="header__nav-item"><a href="#price" class="header__nav-item-link" data-i18n="price">Price</a></li>
+          <li class="header__nav-item"><a href="#contacts" class="header__nav-item-link" data-i18n="contacts">Contacts</a></li>
         </ul>
       </nav>
       <div class="header__switch">
-        <a href="#" class="header__switch-en">en</a><span>/</span><a href="" class="header__switch-ru">ru</a>
+        <a href="#" class="header__switch-en lang-btn _active" data-lang="en">en</a><span>/</span><a href="" class="header__switch-ru lang-btn" data-lang="ru">ru</a>
       </div>
       <div class="hamburger">
         <span class="line1 line"></span>
@@ -39,10 +39,9 @@
     <section class="section hero" id="hero">
       <div class="container hero__container">
         <div class="hero__content">
-          <h1 class="hero__content-title">Alexa Rise</h1>
-          <p class="hero__content-txt">Save sincere emotions, romantic feelings and happy moments of life together with
-            professional photographer Alexa Rise</p>
-          <button class="hero__content-btn btn">Hire me</button>
+          <h1 class="hero__content-title" data-i18n="hero-title">Alexa Rise</h1>
+          <p class="hero__content-txt" data-i18n="hero-txt">Save sincere emotions, romantic feelings and happy moments of life together with professional photographer Alexa Rise</p>
+          <button class="hero__content-btn btn" data-i18n="hire">Hire me</button>
         </div>
       </div>
     </section>
@@ -50,28 +49,28 @@
     <section class="section skills" id="skills">
       <div class="container skills__container">
         <div class="skills__title title-wrapper">
-          <h2 class="section-title">Skills</h2>
+          <h2 class="section-title" data-i18n="skills">Skills</h2>
         </div>
         <div class="skills__content">
           <div class="skills__list">
             <div class="skills__item">
-              <p class="skills__item-title">Digital photography</p>
-              <p class="skills__item-txt">High-quality photos in the studio and on the nature</p>
+              <p class="skills__item-title" data-i18n="skill-title-1">Digital photography</p>
+              <p class="skills__item-txt" data-i18n="skill-text-1">High-quality photos in the studio and on the nature</p>
             </div>
 
             <div class="skills__item">
-              <p class="skills__item-title">Video shooting</p>
-              <p class="skills__item-txt">Capture your moments so that they always stay with you</p>
+              <p class="skills__item-title" data-i18n="skill-title-2">Video shooting</p>
+              <p class="skills__item-txt" data-i18n="skill-text-2">Capture your moments so that they always stay with you</p>
             </div>
 
             <div class="skills__item">
-              <p class="skills__item-title">Retouch</p>
-              <p class="skills__item-txt">I strive to make photography surpass reality</p>
+              <p class="skills__item-title" data-i18n="skill-title-3">Retouch</p>
+              <p class="skills__item-txt" data-i18n="skill-text-3">I strive to make photography surpass reality</p>
             </div>
 
             <div class="skills__item">
-              <p class="skills__item-title">Audio</p>
-              <p class="skills__item-txt">Professional sounds recording for video, advertising, portfolio</p>
+              <p class="skills__item-title" data-i18n="skill-title-4">Audio</p>
+              <p class="skills__item-txt" data-i18n="skill-text-4">Professional sounds recording for video, advertising, portfolio</p>
             </div>
           </div>
         </div>
@@ -82,14 +81,14 @@
 
       <div class="container portfolio__container">
         <div class="portfolio__title title-wrapper">
-          <h2 class="section-title">Portfolio</h2>
+          <h2 class="section-title" data-i18n="portfolio">Portfolio</h2>
         </div>
 
         <div class="portfolio__buttons">
-          <button class="portfolio__buttons-btn btn btn-tr" data-season="winter">Winter</button>
-          <button class="portfolio__buttons-btn btn btn-tr" data-season="spring">Spring</button>
-          <button class="portfolio__buttons-btn btn btn-tr" data-season="summer">Summer</button>
-          <button class="portfolio__buttons-btn btn btn-tr _active" data-season="autumn">Autumn</button>
+          <button class="portfolio__buttons-btn btn btn-tr" data-season="winter" data-i18n="winter">Winter</button>
+          <button class="portfolio__buttons-btn btn btn-tr" data-season="spring" data-i18n="spring">Spring</button>
+          <button class="portfolio__buttons-btn btn btn-tr" data-season="summer" data-i18n="summer">Summer</button>
+          <button class="portfolio__buttons-btn btn btn-tr _active" data-season="autumn" data-i18n="autumn">Autumn</button>
         </div>
 
         <div class="portfolio__photos">
@@ -108,7 +107,7 @@
     <section class="section video" id="video">
       <div class="container video__container">
         <div class="video__title title-wrapper">
-          <h2 class="section-title">Video</h2>
+          <h2 class="section-title" data-i18n="video">Video</h2>
         </div>
 
         <div class="video__player">
@@ -120,46 +119,46 @@
     <section class="section price" id="price">
       <div class="container price__container">
         <div class="price__title title-wrapper">
-          <h2 class="section-title">Price</h2>
+          <h2 class="section-title" data-i18n="price">Price</h2>
         </div>
         <div class="price__list">
           <div class="price__card">
             <p class="price__card-title">Standard</p>
             <p class="price__card-price">500 $</p>
             <p class="price__card-info">
-              <span>One location</span>
-              <span>120 photos in color</span>
-              <span>12 photos in retouch</span>
-              <span>Readiness 2-3 weeks</span>
-              <span>Make up, visage</span>
+              <span data-i18n="price-description-1-span-1">One location</span>
+              <span data-i18n="price-description-1-span-2">120 photos in color</span>
+              <span data-i18n="price-description-1-span-3">12 photos in retouch</span>
+              <span data-i18n="price-description-1-span-4">Readiness 2-3 weeks</span>
+              <span data-i18n="price-description-1-span-5">Make up, visage</span>
             </p>
-            <button class="price__card-btn btn">Order shooting</button>
+            <button class="price__card-btn btn" data-i18n="order">Order shooting</button>
           </div>
 
           <div class="price__card">
             <p class="price__card-title">Premium</p>
             <p class="price__card-price">700 $</p>
             <p class="price__card-info">
-              <span>One or two locations</span>
-              <span>200 photos in color</span>
-              <span>20 photos in retouch</span>
-              <span>Readiness 1-2 weeks</span>
-              <span>Make up, visage </span>
+              <span data-i18n="price-description-2-span-1">One or two locations</span>
+              <span data-i18n="price-description-2-span-2">200 photos in color</span>
+              <span data-i18n="price-description-2-span-3">20 photos in retouch</span>
+              <span data-i18n="price-description-2-span-4">Readiness 1-2 weeks</span>
+              <span data-i18n="price-description-2-span-5">Make up, visage </span>
             </p>
-            <button class="price__card-btn btn">Order shooting</button>
+            <button class="price__card-btn btn" data-i18n="order">Order shooting</button>
           </div>
 
           <div class="price__card">
             <p class="price__card-title">Gold</p>
             <p class="price__card-price">1000 $</p>
             <p class="price__card-info">
-              <span>Three locations or more</span>
-              <span>300 photos in color</span>
-              <span>50 photos in retouch</span>
-              <span>Readiness 1 week</span>
-              <span>Make up, visage, hairstyle</span>
+              <span data-i18n="price-description-3-span-1">Three locations or more</span>
+              <span data-i18n="price-description-3-span-2">300 photos in color</span>
+              <span data-i18n="price-description-3-span-3">50 photos in retouch</span>
+              <span data-i18n="price-description-3-span-4">Readiness 1 week</span>
+              <span data-i18n="price-description-3-span-5">Make up, visage, hairstyle</span>
             </p>
-            <button class="price__card-btn btn">Order shooting</button>
+            <button class="price__card-btn btn" data-i18n="order">Order shooting</button>
           </div>
         </div>
       </div>
@@ -168,13 +167,13 @@
     <section class="section contacts" id="contacts">
       <div class="container contacts__container">
         <div class="contacts__content">
-          <h2 class="section-title contacts__content-title">Contact me</h2>
+          <h2 class="section-title contacts__content-title" data-i18n="contact-me">Contact me</h2>
           <form action="#" class="contacts__form">
-            <input type="email" class="contacts__form-inp" placeholder="E-mail">
-            <input type="tel" class="contacts__form-inp" placeholder="Phone">
+            <input type="email" class="contacts__form-inp" placeholder="E-mail" data-i18n="pl-email">
+            <input type="tel" class="contacts__form-inp" placeholder="Phone" data-i18n="pl-phone">
             <textarea name="message" id="form-area" cols="30" rows="10" class="contacts__form-area"
-              placeholder="Message"></textarea>
-            <button class="contacts__form-btn btn">Send message</button>
+              placeholder="Message" data-i18n="pl-mes"></textarea>
+            <button class="contacts__form-btn btn" data-i18n="send-message">Send message</button>
           </form>
         </div>
       </div>
@@ -205,8 +204,8 @@
 
     </div>
   </footer>
- 
-  <script src="script.js"></script>
+  <script src="index.js"></script>
+  <script type="module" src="./js/script.js"></script>
 
 </body>
 
