feat: add func change theme

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
         </ul>
       </nav>
       <div class="header__switch">
-        <a href="#" class="header__switch-en lang-btn _active" data-lang="en">en</a><span>/</span><a href="" class="header__switch-ru lang-btn" data-lang="ru">ru</a>
+        <a href="#" class="header__switch-en lang-btn _active" data-lang="en">en</a><span>/</span><a href="#" class="header__switch-ru lang-btn" data-lang="ru">ru</a>
+      </div>
+      <div class="header__theme">
+        <a href="#" class="header__theme-link theme-btn"></a>
       </div>
       <div class="hamburger">
         <span class="line1 line"></span>
@@ -204,7 +207,6 @@
 
     </div>
   </footer>
-  <script src="index.js"></script>
   <script type="module" src="./js/script.js"></script>
 
 </body>
