--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       <div class="footer__copyright">
         <span>©</span>
         <span>2022</span>
-        <a href="https://github.com/Tenastika" target="_blank">github</a>
+        <a href="https://github.com/Tenastika" target="_blank">Tenastika</a>
       </div>
       <div class="footer__school"><a href="https://rs.school/js-stage0/" target="_blank"
           class="footer__school-link">Rolling Scopes School</a>
@@ -207,6 +207,7 @@
 
     </div>
   </footer>
+  
   <script type="module" src="./js/script.js"></script>
 
 </body>
